<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateOnly="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/score_unknown"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/primaryText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/score_label"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/secondaryText" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/round_accent_button"
        android:text="@string/make_test"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/about_device"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/listDivider"
            android:orientation="vertical"
            android:showDividers="middle">

            <pl.atk.oeskandroidbenchmark.ui.DeviceInfoCellView
                android:id="@+id/model_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:attributeName="@string/device_info_model_label" />

            <pl.atk.oeskandroidbenchmark.ui.DeviceInfoCellView
                android:id="@+id/os_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:attributeName="@string/device_info_os_label" />

            <pl.atk.oeskandroidbenchmark.ui.DeviceInfoCellView
                android:id="@+id/build_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:attributeName="@string/device_info_build_label" />

            <pl.atk.oeskandroidbenchmark.ui.DeviceInfoCellView
                android:id="@+id/cpu_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:attributeName="@string/device_info_cpu_label" />

            <pl.atk.oeskandroidbenchmark.ui.DeviceInfoCellView
                android:id="@+id/cores_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:attributeName="@string/device_info_cpu_cores_label" />

            <pl.atk.oeskandroidbenchmark.ui.DeviceInfoCellView
                android:id="@+id/memory_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:attributeName="@string/device_info_memory_label" />

            <pl.atk.oeskandroidbenchmark.ui.DeviceInfoCellView
                android:id="@+id/motherboard_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:attributeName="@string/device_info_motherboard_label" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>